[package]
name = "lol-replay-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4"
clap = { version = "4.3.23", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "1.1.0"
env_logger = "0.9.0"
